updates customers
